force-app/main/default/objects/Distribution_Group_History__c/Distribution_Group_History__c.object-meta.xml
<CustomObject>
    <label>Distribution Group History</label>
    <nameField>
        <label>Distribution Group History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Group Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>