force-app/main/default/objects/Distribution_Group_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distribution Group Histories</relationshipLabel>
    <relationshipName>Distribution_Group_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>