force-app/main/default/objects/Distribution_Group_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Distribution Group Histories</relationshipLabel>
    <relationshipName>Distribution_Group_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>