force-app/main/default/objects/Distribution_Group_History__c/fields/Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Group__c</fullName>
    <label>Distribution Group</label>
    <referenceTo>Distribution_Group__c</referenceTo>
    <relationshipLabel>Distribution Group Histories</relationshipLabel>
    <relationshipName>Distribution_Group_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>