force-app/main/default/objects/Distribution_Group_History__c/listViews/My_Round_Robin_Leads.listView-meta.xml
<ListView>
    <fullName>My_Round_Robin_Leads</fullName>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Distribution_Group__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>User__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Round Robin Leads</label>
</ListView>